[package]
name = "cysprite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
egui = "0.18"
egui-macroquad = "0.11"

derivative = "2.2"
procinfo = "0.4.2"

serde = { version = "1.0.145", features = ["derive"] }
png = "0.17.6"
ron = "0.8"
